Fixed issue caused from last merge, where top border was cut off at certain widths

--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,14 @@ body.dark-mode input{
 
 @media(min-width: 600px){
   .app-container {
-    @apply max-w-[600px] top-[35%] left-1/2 transform -translate-x-1/2 -translate-y-1/2;
+    @apply max-w-[600px] top-[40%] left-1/2 transform -translate-x-1/2 -translate-y-1/2;
     
   }
 }
 
 @media(min-width: 766px){
   .app-container{
-    @apply max-w-[600px] 
+    @apply max-w-[600px] top-[45%]
   }
 }
 
